--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 			
 			<p>[29/92]</p>
 			
-			<p style="opacity: 20%">This site was built by Mikey Chapman from scratch using HTML and Adobe Dreamweaver</p>
+			<p style="opacity: 20%">This site was built by Mikey Chapman using HTML and Adobe Dreamweaver</p>
 	  
 		</div>
 </div>
