--- a/the92.html
+++ b/the92.html
@@ -201,8 +201,8 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[29/92]</p>
-				<br>
+				<p>[30/92]</p>
+			  <br>
 			</div>
 			
 		</div>
@@ -544,7 +544,7 @@ and change badge opacity to 100%
 		</div>
 <!-- SWINDON 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Swindon.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Swindon.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Swindon.png')">
 		</div>
 <!-- TOTTENHAM				-->
 		<div class="image-container">
