--- a/the92.html
+++ b/the92.html
@@ -472,7 +472,7 @@ and change badge opacity to 100%
 		</div>
 <!-- PLYMOUTH				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Plymouth.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Plymouth.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Plymouth.png')">
 		</div>
 <!-- PORT VALE				-->
 		<div class="image-container">
