--- a/champ23-24.html
+++ b/champ23-24.html
@@ -161,8 +161,8 @@
   			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Borehamwood.png" alt="BirminghamCity" width="333px" title="[Pre-Season] Borehamwood 0-0 Watford">
 			</div>
 				
-			<!-- <div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Stevenage.png" alt="Stevenage" width="333px" title="[Carabao Cup] Stevenage 0-0 Watford">
-			</div> -->
+			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Stevenage.png" alt="Stevenage" width="333px" title="[Carabao Cup] Stevenage 1-1 Watford (4-3 Penalties)">
+			</div>
 			
 		</div>
 		
