--- a/the92.html
+++ b/the92.html
@@ -520,7 +520,7 @@ and change badge opacity to 100%
 		</div>
 <!-- STEVENAGE 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Stevenage.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Stevenage.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Stevenage.png')">
 		</div>
 <!-- STOCKPORT				-->
 		<div class="image-container">
