--- a/the92.html
+++ b/the92.html
@@ -201,7 +201,7 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[32/92]</p>
+				<p>[33/92]</p>
 			  <br>
 			</div>
 			
@@ -228,7 +228,7 @@ and change badge opacity to 100%
 		</div>
 <!-- AFC WIMBLEDON 			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCWimbledon.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCWimbledon.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Wimbledon.png')">
 		</div>
 <!-- ARSENAL	 			-->
 		<div class="image-container">
