Update and rename UKStadiums.html to OtherStadiums.html

--- a/OtherStadiums.html
+++ b/OtherStadiums.html
@@ -215,7 +215,7 @@ and change badge opacity to 100%
 -->
 		
 		
-        <div class="image-row" style="padding-bottom: 100px;">
+        <div class="image-row" style="padding-bottom: 50px;">
             
 <!-- ENGLAND			 	-->
 		<div class="image-container">
@@ -241,7 +241,7 @@ and change badge opacity to 100%
 
 
 
-			
+
 			
 	
 			
@@ -250,6 +250,43 @@ and change badge opacity to 100%
 			
 			
 			
+
+			
+    </div>		
+		
+		<div class="centered-text">
+			
+			
+			
+			<div>
+				<h1>International Stadiums</h1>
+				<p>Stadiums that I have visited abroad that I have watched a game at.</p>
+				<br>
+		  </div>
+			
+		</div>
+
+	
+	
+	<div class="image-row" style="padding-bottom: 50px;">
+            
+<!-- AC Milan			 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/ACMilan.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/ACMilan.png')">
+		</div>
+		
+<!-- LOSC Lille			 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Lille.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Lille.png')">
+		</div>
+
+		
+		
+		
+</div>
+
+		
+
 <!-- DO NOT TOUCH!!!!!! -->
 			
  <!-- Lightbox overlay -->
@@ -273,14 +310,5 @@ and change badge opacity to 100%
     document.getElementById('overlay').style.display = 'none';
   }
 </script>
-			
-    </div>		
-		
-		
-	</div>
-
-		
-
-
 
 </body></html>
