--- a/football.html
+++ b/football.html
@@ -110,7 +110,7 @@
 			<br>
 			<p>Stadium Visits</p>
 			<a href="/the92.html"><h1>The 92 Challenge</h1></a>
-			<a href="/UKStadiums.html"><h1>Other UK Stadiums</h1></a>
+			<a href="/OtherStadiums.html"><h1>Other UK Stadiums</h1></a>
 			<a href="/internationalstadiums.html"><h1>International Stadiums</h1></a>
 	  </div>
 </div>
