--- a/OtherStadiums.html
+++ b/OtherStadiums.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png">
-  	<meta property="og:title" content="Other UK Stadiums">
+  	<meta property="og:title" content="Other Stadiums">
   	<meta property="og:description" content="Mikey Chapman">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
