--- a/internationalstadiums.html
+++ b/internationalstadiums.html
@@ -17,7 +17,7 @@
 			
 		}
 
-		h3, h2, h1, p, a {
+		h3, h2, h1, p, a, p1 {
 			font-weight: 300; /* light font weight */
 			letter-spacing: 2px;
 			color: #333; /* dark grey color */
@@ -51,8 +51,9 @@
 		
 		p1 {
 			font-size: 1.5em;
-			line-height: 1.5;
+			line-height: 2;
 			text-align: center;
+			padding-bottom: -20px;
 		}
 
 		h1 strong, p strong {
@@ -108,6 +109,11 @@
 			p {
 				font-size: 1em;
 			}
+		
+			p1 {
+				font-size: 1.2em;
+			}
+		
 			h2 {
 				font-size: 1em;
 				text-align: left;
@@ -178,118 +184,111 @@
 		</div>
 		
 		
-		<div class="centered-text">
-			<p>
-				<p1>Camp Nou</p1><br>FC Barcelona<br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Camp Nou</p1></span><br>
+				FC Barcelona<br>
 				Barcelona, Spain<br>
 				October 2015</p>
-			<br>
 			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Ajax.jpg" alt="AFC Ajax">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Ajax.jpg" alt="AFC Ajax">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Johan Cruijff ArenA</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Johan Cruijff ArenA</p1></span><br>
 				AFC Ajax<br>
 				Amsterdam, Netherlands<br>
 				August 2022</p>
 			<br>
-			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Volendam.jpg" alt="FC Volendam">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Volendam.jpg" alt="FC Volendam">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Kras Stadion</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Kras Stadion</p1></span><br>
 				FC Volendam<br>
 				Volendam, Netherlands<br>
 				August 2022</p>
 			<br>
-			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Porto.jpg" alt="FC Porto">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Porto.jpg" alt="FC Porto">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Estádio do Dragão</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Estádio do Dragão</p1></span><br>		
 				FC Porto<br>
 				Porto, Portugal<br>
 				October 2022</p>
-			<br>
 			<br>
 		</div>
 		
 	  <!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Monza.jpg" alt="AC Monza">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Monza.jpg" alt="AC Monza">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Brianteo Stadium</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Brianteo Stadium</p1></span><br>
 				AC Monza<br>
 				Monza, Italy<br>
 				April 2023</p>
 			<br>
-			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/ACMilan.jpg" alt="AC Milan">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/ACMilan.jpg" alt="AC Milan">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>San Siro</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>San Siro</p1></span><br>
 				AC Milan<br>
 				Milan, Italy<br>
 				April 2023</p>
 			<br>
-			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Lille.jpg" alt="LOSC Lille">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Lille.jpg" alt="LOSC Lille">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Stade Pierre-Mauroy</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Stade Pierre-Mauroy</p1></span><br>
 				LOSC Lille<br>
 				Lille, France<br>
 				May 2023</p>
 			<br>
-			<br>
 		</div>
 		
 		<!-- Image -->
 		
 		<div>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Kortrijk.jpg" alt="KV Kortrijk">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Kortrijk.jpg" alt="KV Kortrijk">
 		</div>
 		
-		<div class="centered-text">
-			<p><p1>Guldensporen Stadion</p1><br>
+		<div class="centered-text" style="padding-bottom: 10px;">
+				<p><span><p1>Guldensporen Stadion</p1></span><br>
 				KV Kortrijk<br>
 				Kortrijk, Belgium<br>
 				May 2023</p>
 			<br>
-			<br>
+			
 		</div>
 		
 	</div>
