--- a/champ23-24.html
+++ b/champ23-24.html
@@ -166,9 +166,9 @@
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Stevenage 1-1 Watford (4-3)<br>Lamex Stadium<br>Carabao Cup</p>
 			</div>
 				
-			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Stoke2.png" alt="Stoke" width="333px">
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Stoke2.png" alt="Stoke" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Stoke 0-0 Watford<br>Bet365 Stadium<br>Championship</p>
-			</div> -->
+			</div>
 				
 			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry2.png" alt="Coventry" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry 0-0 Watford<br>Coventry Building Society Arena<br>Championship</p>
