--- a/the92.html
+++ b/the92.html
@@ -528,8 +528,8 @@ and change badge opacity to 100%
 		</div>
 <!-- STOKE					-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Stoke.png" alt="#" >
-		</div> 
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Stoke.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Stoke.png')">
+		</div>
 <!-- SUNDERLAND				-->			
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Sunderland.png" alt="#" >
