--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -237,6 +237,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Borehamwood2.png')">
 		</div>
+<!-- HARROW BOROUGH			-->
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Harrow.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Harrow.png')">
+		</div>
 	
 
 
