--- a/the92.html
+++ b/the92.html
@@ -201,7 +201,7 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[34/92]</p>
+				<p>[35/92]</p>
 			  <br>
 			</div>
 			
@@ -364,7 +364,7 @@ and change badge opacity to 100%
 		</div>
 <!-- GILLINGHAM				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Gillingham.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Gillingham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Gillingham.png')">
 		</div>
 <!-- GRIMSBY				-->
 		<div class="image-container">
