--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,14 @@
 	<a class="back-button" href="/home.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
-		  	<h1>Twitter</h1>
-		  	<a href="https://twitter.com/MikeyJC_" target="_blank"><p>[click here]</p></a>
+		  	<a href="https://x.com/MikeyJC_" target="_blank"><h1>X</h1>
+		  	<p>[click here]</p></a>
 			<br>
-			<h1>Instagram</h1>
-		  	<a href="https://www.instagram.com/mikeyjc_/" target="_blank"><p>[click here]</p></a><br>
-			<h1>LinkedIn</h1>
-		  	<a href="https://www.linkedin.com/in/mikeyjc/" target="_blank"><p>[click here]</p></a>
+			<a href="https://www.instagram.com/mikeyjc_/" target="_blank"><h1>Instagram</h1>
+		  	<p>[click here]</p></a>
+			<br>
+			<a href="https://www.linkedin.com/in/mikeyjc/" target="_blank"><h1>LinkedIn</h1>
+		  	<p>[click here]</p></a>
 	  	</div>
 </div>
 </body>
