--- a/champ23-24.html
+++ b/champ23-24.html
@@ -167,12 +167,12 @@
 			</div>
 				
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Stoke2.png" alt="Stoke" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Stoke 1-0 Watford<br>Bet365 Stadium<br>Championship</p>
-			</div> 
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Stoke 0-0 Watford<br>Bet365 Stadium<br>Championship</p>
+			</div>
 				
-			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry2.png" alt="Coventry" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry 0-0 Watford<br>Coventry Building Society Arena<br>Championship</p>
-			</div> -->
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry2.png" alt="Coventry" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry 3-3 Watford<br>Coventry Building Society Arena<br>Championship</p>
+			</div>
 			
 		</div>
 		
