--- a/projects.html
+++ b/projects.html
@@ -107,9 +107,9 @@
 				<h1>Watford FC</h1>
 		  	</a>
 			<br>
-			<a href="/afcstaustell.html">
+			<a href="/thetoastclub.html">
 				<p>Project 2</p>
-				<h1>AFC St. Austell</h1>
+				<h1>TheToast Club</h1>
 		  	</a>
 			<br>
 			<a href="/orbitproperty.html">
