--- a/otherprojects.html
+++ b/otherprojects.html
@@ -101,9 +101,9 @@
 	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
-		  	<a href="#">
+		  	<a href="/afcstaustell.html">
 				<p>Project 1</p>
-				<h1>Ministry</h1>
+				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
 			
