--- a/otherprojects.html
+++ b/otherprojects.html
@@ -98,7 +98,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
+	<a class="back-button" href="/otherprojects.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	<a href="/afcstaustell.html">
