--- a/thetoastclub.html
+++ b/thetoastclub.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/sportcheckshareimage.png" />
-  	<meta property="og:title" content="Sport Check Design" />
+  	<meta property="og:image" content="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/TheToastClub/thetoastclubshareimage.png" />
+  	<meta property="og:title" content="The Toast Club" />
   	<meta property="og:description" content="Mikey Chapman" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -170,9 +170,9 @@
 		
 		
 		
-		  <p>The Toast Club, Kortrijk, Belgium, is home to the world's greatest toasties on this planet (in my opinion obviously), but after visiting it felt as if the same care that goes into making their sandwiches hasn't been put into their branding. It is for this reason that I have taken it upon myself to rebrand this wonderful place and make it a more appealing place for customers to eat at. </p>
+		  	<p>The Toast Club, Kortrijk, Belgium, is home to the world's greatest toasties on this planet (in my opinion obviously), but after visiting it felt as if the same care that goes into making their sandwiches hasn't been put into their branding. It is for this reason that I have taken it upon myself to rebrand this wonderful place and make it a more appealing place for customers to eat at. </p>
 			
-		<p>The first plan of action was to come up with a logo, and at the same time a colour scheme would reveal itself. I got lucky when it came the the design process as it didnt take me long to find a style that I wanted to use. The harder part was perfecting all of the minor details.</p>
+			<p>The first plan of action was to come up with a logo, and at the same time a colour scheme would reveal itself. I got lucky when it came the the design process as it didnt take me long to find a style that I wanted to use. The harder part was perfecting all of the minor details.</p>
 		
 		
 		  <br>
