--- a/thetoastclub.html
+++ b/thetoastclub.html
@@ -165,7 +165,7 @@
 			
 			
 		
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/TheToastClub/TheToastClub-Logo3.png" alt="">
+		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/TheToastClub/TheToastClub-Logo.svg" alt="">
 		
 		
 		
