--- a/thetoastclub.html
+++ b/thetoastclub.html
@@ -215,6 +215,16 @@
 		</div>
 			
 			<br>
+			
+		<p>The physical location in Kortrijk is not the most noticable of places, with its black and white branding on top of the entrance, it just blends into the surrounding structures. In order to make it stand out, all I had to do was apply the brand colours and assets to the signage above the shop and the extendable cover that protects the outdoor seating from the elements.</p>
+			
+			<br>
+		
+		<div>
+	  	  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/TheToastClub/TheToastClub-ShopFront.png" alt="">
+		</div>
+			
+			<br>
 		
 		</div>
 	</div>
