--- a/otherprojects.html
+++ b/otherprojects.html
@@ -106,6 +106,12 @@
 				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
+
+			<a href="/nexuscards.html">
+				<p>Project 2</p>
+				<h1>Nexus Cards</h1>
+		  	</a>
+			<br>
 			
 	  	</div>
 	</div>
