--- a/champ23-24.html
+++ b/champ23-24.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 	<title>Championship 2023/24</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="Championship 2023/24 Away Days" />
-  <meta property="og:description" content="Mikey Chapman" />
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png">
+  <meta property="og:title" content="Championship 2023/24 Away Days">
+  <meta property="og:description" content="Mikey Chapman">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&amp;display=swap" rel="stylesheet">
 	
 	<style>
 		body {
@@ -145,7 +143,7 @@
 	</style>
 </head>
 	
-<body>
+<body cz-shortcut-listen="true">
 	<a class="back-button" href="/football.html"><h2>Back</h2></a>
 	
 	<div class="container">
@@ -173,11 +171,20 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry2.png" alt="Coventry" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry 3-3 Watford<br>Coventry Building Society Arena<br>Championship</p>
 			</div>
+				
+			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Leeds.png" alt="Leeds" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leeds 0-0 Watford<br>Elland Road<br>Championship</p>
+			</div> -->
+				
+			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Sunderland.png" alt="Sunderland" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Sunderland 0-0 Watford<br>Stadium of Light<br>Championship</p>
+			</div> -->
 			
 		</div>
 		
 	</div>
 
-</body>
 
-</html>
+
+
+</body></html>
