--- a/otherprojects.html
+++ b/otherprojects.html
@@ -112,6 +112,12 @@
 				<h1>Nexus Cards</h1>
 		  	</a>
 			<br>
+
+			<a href="/eogroup.html">
+				<p>Project 3</p>
+				<h1>EO Group</h1>
+		  	</a>
+			<br>
 			
 	  	</div>
 	</div>
