--- a/sportcheck-apparel.html
+++ b/sportcheck-apparel.html
@@ -130,7 +130,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/sportcheck.html"><h2>Back</h2></a>
+	<a class="back-button" href="/sportcheck-creation.html"><h2>Back</h2></a>
 	
 	
 	<div class="container">
