--- a/sportcheck-creation.html
+++ b/sportcheck-creation.html
@@ -5,18 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/sportcheckshareimage.png" />
-  <meta property="og:title" content="Sport Check Design" />
-  <meta property="og:description" content="Mikey Chapman" />
+  	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/sportcheckshareimage.png" />
+  	<meta property="og:title" content="Sport Check Design" />
+  	<meta property="og:description" content="Mikey Chapman" />
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
+	
 	<style>
+		
 		body {
-			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			
 		}
 
-		h3, h2, h1, p {
-			font-weight: 100; /* light font weight */
+		h3, h2, h1, p, a {
+			font-weight: 300; /* light font weight */
 			letter-spacing: 2px;
 			color: #333; /* dark grey color */
+			font-family: 'Poppins', sans-serif;
 		}
 
 		h1 {
@@ -51,8 +58,6 @@
 		
 		a {
 			text-decoration: none;
-			color: #333333;
-			cursor: pointer;
 		}
 
 		.container {
@@ -69,6 +74,11 @@
 		}
 		
 		img {
+			max-width: 750px;
+			height: auto;
+		}
+		
+		video {
 			max-width: 750px;
 			height: auto;
 		}
@@ -96,6 +106,12 @@
 				max-width: 100%;
 				height: auto;
 			}
+			
+			video {
+				max-width: 100%;
+				height: auto;
+			}
+			
 			.centered-text {
 				text-align: center;
 				max-width: 80%;
