--- a/sportcheck-creation.html
+++ b/sportcheck-creation.html
@@ -130,7 +130,7 @@
 <body>
 	
 	
-	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/sportcheck.html><h2>Back</h2></a>
 	
 	
 	<div class="container">
