--- a/the92.html
+++ b/the92.html
@@ -201,7 +201,7 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[35/92]</p>
+				<p>[36/92]</p>
 			  <br>
 			</div>
 			
@@ -388,7 +388,7 @@ and change badge opacity to 100%
 		</div>
 <!-- LEEDS					-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Leeds.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Leeds.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Leeds.png')">
 		</div>
 <!-- LEICESTER 				-->
 		<div class="image-container">
