--- a/otherprojects.html
+++ b/otherprojects.html
@@ -101,23 +101,32 @@
 	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
-		  	<a href="/afcstaustell.html">
+
+			<a href="/posters-password.html">
 				<p>Project 1</p>
+				<h1>Posters</h1>
+		  	</a>
+			<br>
+			
+		  	<a href="/afcstaustell.html">
+				<p>Project 2</p>
 				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
 
 			<a href="/nexuscards.html">
-				<p>Project 2</p>
+				<p>Project 3</p>
 				<h1>Nexus Cards</h1>
 		  	</a>
 			<br>
 
 			<a href="/eogroup.html">
-				<p>Project 3</p>
+				<p>Project 4</p>
 				<h1>EO Group</h1>
 		  	</a>
 			<br>
+
+			
 			
 	  	</div>
 	</div>
