--- a/posters-password.html
+++ b/posters-password.html
@@ -130,7 +130,7 @@
 			<div style="text-align: center; margin-top: 100px;">
         <a for="keyword">Enter Password:</a>
 				<br><br>
-        <input style="text-align: center" type="text" id="keyword" placeholder="Type the word"><br>
+        <input style="text-align: center" type="text" id="keyword" placeholder="/"><br>
 				<br>
         <a onclick="checkKeyword()" style="height: 35px; text-align: center; cursor: pointer">[Submit]</a>
     </div>
