--- a/champ23-24.html
+++ b/champ23-24.html
@@ -176,9 +176,9 @@
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leeds 3-0 Watford<br>Elland Road<br>Championship</p>
 			</div>
 				
-			<!-- <div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Sunderland.png" alt="Sunderland" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Sunderland 0-0 Watford<br>Stadium of Light<br>Championship</p>
-			</div> -->
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Sunderland.png" alt="Sunderland" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Sunderland 2-0 Watford<br>Stadium of Light<br>Championship</p>
+			</div>
 			
 		</div>
 		
