--- a/eogroup.html
+++ b/eogroup.html
@@ -140,7 +140,7 @@
 			
 			<div>
 				<h1>EO Group - UK Office Direct &amp; Euroffice&nbsp;</h1>
-				<p>These are just some of my favourite banners that I have had to design during my time at EO Group for UK Office Direct and Euroffice.&nbsp;&nbsp;</p>
+				<p>These are just some of my favourite banners that I have had to design during my time at EO Group for UK Office Direct, Euroffice and Office Power Dealers</p>
 				<br>
 			</div>
 			
@@ -168,7 +168,15 @@
 			<p>UK Office Direct - Free Chocolates Banner</p>
 			<br>
 		</div>
+
+		<div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/EOGroup/PenSutton.png" alt="">
+		</div>
 		
+		<div class="centered-text">
+			<p>Penguin Office x Sutton Office</p>
+			<br>
+		</div>
 		
 		
 		
