--- a/eogroup.html
+++ b/eogroup.html
@@ -139,8 +139,8 @@
 			
 			
 			<div>
-				<h1>EO Group - UK Office Direct &amp; Euroffice&nbsp;</h1>
-				<p>These are just some of my favourite banners that I have had to design during my time at EO Group for UK Office Direct, Euroffice and Office Power Dealers</p>
+				<h1>EO Group - UK Office Direct, Euroffice &amp; Office Power</h1>
+				<p>These are just some of my favourite banners that I have had to design during my time at EO Group for UK Office Direct, Euroffice and Office Power Dealers.</p>
 				<br>
 			</div>
 			
