--- a/the92.html
+++ b/the92.html
@@ -312,7 +312,7 @@ and change badge opacity to 100%
 		</div>
 <!-- CHELTENHAM				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cheltenham.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cheltenham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Cheltenham.png')">
 		</div>
 <!-- COLCHESTER				-->
 		<div class="image-container">
