Update and rename posters-password.html to password.html

--- a/password.html
+++ b/password.html
@@ -164,7 +164,7 @@
             // Check if the entered word matches the certain word
             if (enteredWord === certainWord) {
                 // Redirect to another page (replace 'target_page.html' with your desired URL)
-                window.location.href = "/posters.html";
+                window.location.href = "/.html";
             } else {
                 alert("Nope. That's not it...");
             }
