--- a/otherprojects.html
+++ b/otherprojects.html
@@ -102,7 +102,7 @@
 	<div class="container">
 		<div class="centered-text">
 
-			<a href="/posters-password.html">
+			<a href="/posters.html">
 				<p>Project 1</p>
 				<h1>Posters</h1>
 		  	</a>
