--- a/the92.html
+++ b/the92.html
@@ -448,7 +448,7 @@ and change badge opacity to 100%
 		</div>
 <!-- NORTHAMPTON			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Northampton.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Northampton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Northampton.png')">
 		</div>
 <!-- NORWICH	 			-->
 		<div class="image-container">
