--- a/the92.html
+++ b/the92.html
@@ -201,7 +201,7 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[40/92]</p>
+				<p>[41/92]</p>
 			  <br>
 			</div>
 			
@@ -468,7 +468,7 @@ and change badge opacity to 100%
 		</div>
 <!-- PETERBOROUGH 			-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Peterbrough.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Peterbrough.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Peterborough.png')">
 		</div>
 <!-- PLYMOUTH				-->
 		<div class="image-container">
