--- a/football.html
+++ b/football.html
@@ -109,7 +109,7 @@
 			<a href="/champ23-24.html"><h1>Championship 2023/24</h1></a>
 			<br>
 			<p>Stadium Visits</p>
-			<a href="/the92.html"><h1>The 92 Challenge</h1></a>
+			<a href="/the92.html"><h1>The 92 Club</h1></a>
 			<a href="/otherstadiums.html"><h1>Other Stadiums</h1></a>
 			<a href="/internationalstadiums.html"><h1>International Stadiums</h1></a>
 	  </div>
