--- a/the92.html
+++ b/the92.html
@@ -199,9 +199,9 @@
 			
 			
 			<div>
-				<h1>The 92</h1>
+				<h1>The 92 Club</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[43/92]</p>
+				<p>[44/92]</p>
 			  <br>
 			</div>
 			
@@ -360,7 +360,7 @@ and change badge opacity to 100%
 		</div>
 <!-- FULHAM 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Fulham.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Fulham.png" alt="#" >
 		</div>
 <!-- GILLINGHAM				-->
 		<div class="image-container">
