--- a/the92.html
+++ b/the92.html
@@ -200,7 +200,8 @@
 			
 			<div>
 				<h1>The 92 Club</h1>
-				<p>This is my progress on completing the 92.</p>
+			  <p>This is my progress on completing the 92.<br><span </span></p>
+				<p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
 				<p>[44/92]</p>
 			  <br>
 			</div>
@@ -360,7 +361,7 @@ and change badge opacity to 100%
 		</div>
 <!-- FULHAM 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Fulham.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Fulham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Fulham.png')">
 		</div>
 <!-- GILLINGHAM				-->
 		<div class="image-container">
