--- a/champ23-24.html
+++ b/champ23-24.html
@@ -1,14 +1,16 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+<head>
 	<title>Championship 2023/24</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png">
-  <meta property="og:title" content="Championship 2023/24 Away Days">
-  <meta property="og:description" content="Mikey Chapman">
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="Championship 2023/24 Away Days" />
+  <meta property="og:description" content="Mikey Chapman" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&amp;display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
 	
 	<style>
 		body {
@@ -143,7 +145,7 @@
 	</style>
 </head>
 	
-<body cz-shortcut-listen="true">
+<body>
 	<a class="back-button" href="/football.html"><h2>Back</h2></a>
 	
 	<div class="container">
@@ -179,12 +181,19 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Sunderland.png" alt="Sunderland" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Sunderland 2-0 Watford<br>Stadium of Light<br>Championship</p>
 			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Leicester2.png" alt="Leicester" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leicester 2-0 Watford<br>King Power Stadium<br>Championship</p>
+			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Hull.png" alt="Hull" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Hull 0-0 Watford<br>MKM Stadium<br>Championship</p>
+			</div>
 			
 		</div>
 		
 	</div>
 
+</body>
 
-
-
-</body></html>
+</html>
