--- a/the92.html
+++ b/the92.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The 92 Club</title>
+	<title>The 92</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png">
-  	<meta property="og:title" content="The 92 Club">
+  	<meta property="og:title" content="The 92">
   	<meta property="og:description" content="Mikey Chapman">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -381,7 +381,7 @@ and change badge opacity to 100%
 		</div>
 <!-- HULL	 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Hull.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Hull.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Hull.png')">
 		</div>
 <!-- IPSWICH				-->
 		<div class="image-container">
