--- a/otherprojects.html
+++ b/otherprojects.html
@@ -102,26 +102,33 @@
 	<div class="container">
 		<div class="centered-text">
 
+			
 			<a href="/posters.html">
 				<p>Project 1</p>
 				<h1>Posters</h1>
 		  	</a>
 			<br>
+
+			<a href="/47.html">
+				<p>Project 2</p>
+				<h1>'47 Brand</h1>
+		  	</a>
+			<br>
 			
 		  	<a href="/afcstaustell.html">
-				<p>Project 2</p>
+				<p>Project 3</p>
 				<h1>AFC St. Austell</h1>
 		  	</a>
 			<br>
 
 			<a href="/nexuscards.html">
-				<p>Project 3</p>
+				<p>Project 4</p>
 				<h1>Nexus Cards</h1>
 		  	</a>
 			<br>
 
 			<a href="/eogroup.html">
-				<p>Project 4</p>
+				<p>Project 5</p>
 				<h1>EO Group</h1>
 		  	</a>
 			<br>
