--- a/the92.html
+++ b/the92.html
@@ -202,7 +202,7 @@
 				<h1>The 92 Club</h1>
 			  <p>This is my progress on completing the 92.<br><span </span></p>
 				<p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
-				<p>[45/92]</p>
+				<p>[46/92]</p>
 			  <br>
 			</div>
 			
@@ -269,7 +269,7 @@ and change badge opacity to 100%
 		</div>
 <!-- BRENTFORD				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brentford.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brentford.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Brentford.png')">
 		</div>
 <!-- BRIGHTON				-->
 		<div class="image-container">
