--- a/47.html
+++ b/47.html
@@ -149,6 +149,19 @@
 		<!-- Image -->
 		
 		<div>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/PremierLeagueHeader1.png" alt="">
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Premier League Clubs Catalogue Header</p>
+			<br>
+		</div>
+		
+		<!-- Image -->
+		
+		<div>
 		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/Arsenal2.png" alt="">
 		</div>
 		
