--- a/champ23-24.html
+++ b/champ23-24.html
@@ -187,7 +187,11 @@
 			</div>
 				
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Hull.png" alt="Hull" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Hull 1-2 Watford<br>MKM Stadium<br>Championship</p>
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Hull 0-0 Watford<br>MKM Stadium<br>Championship</p>
+			</div>
+				
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/QPR2.png" alt="QPR" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">QPR 1-2 Watford<br>Loftus Road<br>Championship</p>
 			</div>
 			
 		</div>
