--- a/the92.html
+++ b/the92.html
@@ -509,7 +509,7 @@ and change badge opacity to 100%
 		</div>
 <!-- SHEFFIELD WEDNESDAY	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/SheffieldWed.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/SheffieldWed.png')">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/SheffieldWed.png" alt="#" >
 		</div>
 <!-- SHREWSBURY 			-->			
 		<div class="image-container">
