--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -199,7 +199,7 @@
 			
 			
 			<div>
-				<h1>Other UK Stadiums</h1>
+				<h1>Other Sports</h1>
 				<p>Stadiums that I have been to within the UK that aren't part of the EFL.</p>
 				<br>
 			</div>
@@ -287,11 +287,34 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Lille.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Lille.png')">
 		</div>
+		
+		
+<!-- Bayern Munich			 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BayernMunich.png" alt="#" >
+		</div>
 
 		
 		
 		
 </div>
+		
+<div class="centered-text">
+			
+			
+			
+			<div>
+				<h1>Other Sports</h1>
+				<p>Stadiums that I have been to watch anything other than football.</p>
+				<br>
+		  </div>
+			
+		</div>
+		
+<!-- Boston Celtics		 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BostonCeltics.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/BostonCeltics.png')">
+		</div>
 
 		
 
