--- a/47.html
+++ b/47.html
@@ -149,13 +149,26 @@
 		<!-- Image -->
 		
 		<div>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/PremierLeagueHeader2.png" alt="">
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Premier League Clubs Catalogue Header 2</p>
+			<br>
+		</div>
+		
+		<!-- Image -->
+		
+		<div>
 		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/PremierLeagueHeader1.png" alt="">
 		</div>
 		
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>Premier League Clubs Catalogue Header</p>
+			<p>Premier League Clubs Catalogue Header 1</p>
 			<br>
 		</div>
 		
