--- a/47.html
+++ b/47.html
@@ -145,6 +145,33 @@
 			</div>
 			
 		</div>
+
+		<!-- Image -->
+		
+		<div>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/HitchHeader.png" alt="">
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Hitch Style Hat Header</p>
+			<br>
+		</div>
+
+		<!-- Image -->
+		
+		<div>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/47/BlackTonalHeader.png" alt="">
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>Black Tonal Style Hat Header</p>
+			<br>
+		</div>
+		
 		
 		<!-- Image -->
 		
