--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="centered-text">
 			<h1>Mikey Chapman</h1>
 			<br><br>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/Stadium.png" alt="Vicarage Road">
+			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/LogoGif3.gif" alt="Logo" style="height: 375px;">
 			<br><br>
 			<a href="/home.html"><p>[click here to enter]</p></a>
 		</div>
