--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<br><br>
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/LogoGif3.gif" alt="Logo" style="height: 375px;">
 			<br><br>
-			<a href="/home.html"><p>[click here to enter]</p></a>
+			<a href="/home"><p>[click here to enter]</p></a>
 		</div>
 	</div>
 </body>
