--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
 	
 <body>
 	
-	<a class="back-button" href="/index.html"><h2>Back</h2></a>
+	<a class="back-button" href="/"><h2>Back</h2></a>
 	
 	<div class="container">
 		<div class="centered-text">
