--- a/afcstaustell.html
+++ b/afcstaustell.html
@@ -110,7 +110,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/otherprojects.html"><h2>Back</h2></a>
+	<a class="back-button" href="/otherprojects"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			<h1>AFC St. Austell Rebrand</h1>
