--- a/football.html
+++ b/football.html
@@ -99,19 +99,19 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home.html"><h2>Back</h2></a>
+	<a class="back-button" href="/home"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			
 			<p>Watford Away Days</p>
-		  	<a href="/prem21-22.html"><h1>Premier League 2021/22</h1></a>
-			<a href="/champ22-23.html"><h1>Championship 2022/23</h1></a>
-			<a href="/champ23-24.html"><h1>Championship 2023/24</h1></a>
+		  	<a href="/prem21-22"><h1>Premier League 2021/22</h1></a>
+			<a href="/champ22-23"><h1>Championship 2022/23</h1></a>
+			<a href="/champ23-24"><h1>Championship 2023/24</h1></a>
 			<br>
 			<p>Stadium Visits</p>
-			<a href="/the92.html"><h1>The 92 Club</h1></a>
-			<a href="/otherstadiums.html"><h1>Other Stadiums</h1></a>
-			<a href="/internationalstadiums.html"><h1>International Stadiums</h1></a>
+			<a href="/the92"><h1>The 92 Club</h1></a>
+			<a href="/otherstadiums"><h1>Other Stadiums</h1></a>
+			<a href="/internationalstadiums"><h1>International Stadiums</h1></a>
 	  </div>
 </div>
 </body>
